# hexchat-indicator

./: AUTHORS  Makefile.am  Makefile.in  NEWS  README.md  aclocal.m4  config.h.in  configure  configure.ac  indicator.c
debian/: changelog  control  copyright  rules  watch  xchat-gnome-indicator.install  xchat-plugin-indicator.install
debian/patches/: series
